--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         body {
             font-family: Arial, sans-serif;
             padding: 20px;
+            background-color: #1e1e1e;
+            color: #f0f0f0;
         }
         #input-div {
             display: flex;
@@ -17,6 +19,10 @@
         input {
             padding: 10px;
             font-size: 16px;
+            background-color: #333;
+            color: #f0f0f0;
+            border: 1px solid #555;
+            border-radius: 4px;
         }
         ul {
             list-style-type: none;
